--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
@@ -172,7 +172,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Data\基站信息\UDPArchorList.xml" />
+    <None Include="Data\基站信息\UDPArchorList.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Data\基站信息\ArchorFiles.xml">
