--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ArchorUDPListener.xaml.cs">
       <DependentUpon>ArchorUDPListener.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\ServerIpList.cs" />
     <Compile Include="Models\UDPArchorValue.cs" />
     <Compile Include="Tools\PingEx.cs" />
     <Compile Include="UDPArchorInfoBox.xaml.cs">
