--- a/Server/WebSite/LocationWeb/Web.config
+++ b/Server/WebSite/LocationWeb/Web.config
@@ -59,6 +59,9 @@
   
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="LocationConnection" connectionString="Server=127.0.0.1;Database=Location;User ID = root;Password = 123456;port=3306;" providerName="MySql.Data.MySqlClient" />
+    <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1;Database=LocationHistory;User ID = root;Password = 123456;port=3306;" providerName="MySql.Data.MySqlClient" />
+    <add name="topviewxpConnection" connectionString="Server=127.0.0.1;Database=topviewxp;User ID = root;Password = 123456;port=3306;" providerName="MySql.Data.MySqlClient" />-->
     <add name="LocationConnection" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
     <add name="topviewxpConnection" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
@@ -162,6 +165,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
