--- a/Model/TModel/TModel.csproj
+++ b/Model/TModel/TModel.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BaseData\Ticket.cs" />
     <Compile Include="ConvertCodes\ByNameAttribute.cs" />
     <Compile Include="ConvertCodes\ConvertCodeGenerator.cs" />
+    <Compile Include="LocationHistory\AreaAndDev\EntranceGuardActionInfo.cs" />
     <Compile Include="LocationHistory\Work\OperationItemHistory.cs" />
     <Compile Include="LocationHistory\Work\OperationTicketHistory.cs" />
     <Compile Include="LocationHistory\Work\PersonnelMobileInspectionHistory.cs" />
