--- a/Model/TModel/TModel.csproj
+++ b/Model/TModel/TModel.csproj
@@ -100,10 +100,16 @@
     <Compile Include="Location\Work\SafetyMeasures.cs" />
     <Compile Include="Location\Work\WorkTicket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\ByteHelper.cs" />
     <Compile Include="Tools\ConvertHelper.cs" />
     <Compile Include="Tools\DevTypeHelper.cs" />
     <Compile Include="Tools\ExtensionBase.cs" />
     <Compile Include="Tools\TimeConvert.cs" />
+    <Compile Include="UDPTool\ArchorStatistics.cs" />
+    <Compile Include="UDPTool\ServerIpList.cs" />
+    <Compile Include="UDPTool\UDPArchor.cs" />
+    <Compile Include="UDPTool\UDPArchorList.cs" />
+    <Compile Include="UDPTool\UDPArchorValue.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
