--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
@@ -60,8 +60,6 @@
     <Compile Include="Controls\UDPArchorListBox.xaml.cs">
       <DependentUpon>UDPArchorListBox.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\ServerIpList.cs" />
-    <Compile Include="Models\UDPArchorValue.cs" />
     <Compile Include="Tools\PingEx.cs" />
     <Compile Include="UDPArchorInfoBox.xaml.cs">
       <DependentUpon>UDPArchorInfoBox.xaml</DependentUpon>
@@ -96,7 +94,6 @@
       <DependentUpon>ArchorConfigureWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ArchorManagers\ArchorManager.cs" />
-    <Compile Include="ArchorManagers\ArchorStatistics.cs" />
     <Compile Include="ArchorUDPSettingWindow.xaml.cs">
       <DependentUpon>ArchorUDPSettingWindow.xaml</DependentUpon>
     </Compile>
@@ -129,8 +126,6 @@
     <Compile Include="Commands\CommandResult.cs" />
     <Compile Include="Commands\CommandResultGroup.cs" />
     <Compile Include="Commands\CommandResultManager.cs" />
-    <Compile Include="Models\UDPArchor.cs" />
-    <Compile Include="Models\UDPArchorList.cs" />
     <Compile Include="PingWindow.xaml.cs">
       <DependentUpon>PingWindow.xaml</DependentUpon>
     </Compile>
@@ -203,6 +198,9 @@
     <None Include="Data\基站信息\ArchorFiles.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
