--- a/Model/DbModel/DbModel.csproj
+++ b/Model/DbModel/DbModel.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Engine\bus_tag.cs" />
     <Compile Include="Location\AreaAndDev\Dev_DoorAccess.cs" />
     <Compile Include="Location\AreaAndDev\Picture.cs" />
+    <Compile Include="Location\AreaAndDev\Shape.cs" />
     <Compile Include="Location\Authorizations\CardRole.cs" />
     <Compile Include="Location\Settings\ArchorSetting.cs" />
     <Compile Include="Tools\ArchorHelper.cs" />
