--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -21,9 +21,9 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="LocationConnection" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="LocationHistoryConnection" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
-    <add name="topviewxpConnection" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
+    <add name="LocationConnection" connectionString="Server=172.16.100.26,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = iom@123;" providerName="System.Data.SqlClient" />
+    <add name="LocationHistoryConnection" connectionString="Server=172.16.100.26,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = iom@123;" providerName="System.Data.SqlClient" />
+    <add name="topviewxpConnection" connectionString="Server=172.16.100.26,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = iom@123;" providerName="System.Data.SqlClient" />
     <add name="EngineLite" connectionString="Data Source=Data\engine.db" providerName="System.Data.SQLite.EF6" />
     <add name="LocationLite" connectionString="Data Source=Data\location.db" providerName="System.Data.SQLite.EF6" />
     <add name="LocationHisLite" connectionString="Data Source=Data\locationHis.db" providerName="System.Data.SQLite.EF6" />
