--- a/Server/WCFServer/LocationWCF/Location.Server.csproj
+++ b/Server/WCFServer/LocationWCF/Location.Server.csproj
@@ -414,6 +414,21 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Data\DbInfos\ArchorSetting.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\DbInfos\AreaAuthorization.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\DbInfos\AreaAuthorizationRecord.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\DbInfos\CardRole.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\DbInfos\Picture.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Data\基站信息\UDPArchorList.xml" />
     <None Include="Data\基站信息\ArchorFiles.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
