--- a/Model/TModel/TModel.csproj
+++ b/Model/TModel/TModel.csproj
@@ -54,6 +54,7 @@
     <Compile Include="LocationHistory\Work\SafetyMeasuresHistory.cs" />
     <Compile Include="LocationHistory\Work\WorkTicketHistory.cs" />
     <Compile Include="Location\AreaAndDev\Archor.cs" />
+    <Compile Include="Location\AreaAndDev\Dev_CameraInfo.cs" />
     <Compile Include="Location\AreaAndDev\Dev_DoorAccess.cs" />
     <Compile Include="Location\AreaAndDev\ModelTypeItem.cs" />
     <Compile Include="Location\AreaAndDev\NearbyDev.cs" />
