--- a/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
+++ b/Server/WCFServer/Tools/ArchorUDPTool/ArchorUDPTool.csproj
@@ -183,6 +183,10 @@
       <Project>{a1b87d98-60df-4f13-976c-b776f6415626}</Project>
       <Name>ExcelLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Third\Projects\wpftoolkit-master\ExtendedWPFToolkitSolution\Src\Xceed.Wpf.Toolkit\Xceed.Wpf.Toolkit.csproj">
+      <Project>{72E591D6-8F83-4D8C-8F67-9C325E623234}</Project>
+      <Name>Xceed.Wpf.Toolkit</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Data\基站信息\TextFile1.txt">
