--- a/Server/WebSite/LocationWeb/Web.config
+++ b/Server/WebSite/LocationWeb/Web.config
@@ -9,7 +9,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <log4net>
     <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
     <!-- Set root logger level to ERROR and its appenders -->
@@ -71,6 +71,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DataInitMode" value="0" />
+
+    <add key="Ip" value="127.0.0.1" />
+    <add key="Port" value="8733" />
+    <add key="User" value="admin" />
+    <add key="Password" value="admin" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
