--- a/BLL/BLL/BLL.csproj
+++ b/BLL/BLL/BLL.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Tools\LocationDeviceHelper.cs" />
     <Compile Include="Tools\Log.cs" />
     <Compile Include="Tools\RandomTool.cs" />
+    <Compile Include="Tools\StaticEvents.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
