--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Converters\AreaConvertHelper.cs" />
     <Compile Include="Converters\DepartmentConvertHelper.cs" />
     <Compile Include="Converters\DevConverHelper.cs" />
+    <Compile Include="Converters\LocationAlarmHelper.cs" />
     <Compile Include="Converters\ModelConvertHelper.cs" />
     <Compile Include="Converters\ModelConvertHelperOfBaseData.cs" />
     <Compile Include="Converters\PersonConvertHelper.cs" />
