--- a/Server/WebSite/LocationWeb/packages.config
+++ b/Server/WebSite/LocationWeb/packages.config
@@ -41,7 +41,7 @@
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Cors" version="2.1.0" targetFramework="net45" />
@@ -59,6 +59,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="Webdiyer.MvcPager" version="3.0.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
