--- a/WebApi/WebApiComunication/WebApiCommunication.csproj
+++ b/WebApi/WebApiComunication/WebApiCommunication.csproj
@@ -57,6 +57,7 @@
     <Compile Include="SihuiThermalPowerPlant\Models\devices_actions.cs" />
     <Compile Include="SihuiThermalPowerPlant\Models\events.cs" />
     <Compile Include="SihuiThermalPowerPlant\Models\org.cs" />
+    <Compile Include="SihuiThermalPowerPlant\Models\position.cs" />
     <Compile Include="SihuiThermalPowerPlant\Models\sis.cs" />
     <Compile Include="SihuiThermalPowerPlant\Models\tickets.cs" />
     <Compile Include="SihuiThermalPowerPlant\Models\users.cs" />
