--- a/WebApi/WebNSQLib/WebNSQLib.csproj
+++ b/WebApi/WebNSQLib/WebNSQLib.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SynchronizedPosition.cs" />
     <Compile Include="RealAlarm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
