--- a/BLL/BLL/BLL.csproj
+++ b/BLL/BLL/BLL.csproj
@@ -57,8 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppContext.cs" />
-    <Compile Include="Blls\Engine\bus_anchor_configBll.cs" />
-    <Compile Include="Blls\Engine\bus_anchor_switch_areaBll.cs" />
+    <Compile Include="Blls\Location\DevMonitorNodeBll.cs" />
     <Compile Include="Blls\Location\Dev_CameraInfoBll.cs" />
     <Compile Include="Buffers\AuthorizationBuffer.cs" />
     <Compile Include="Buffers\BaseBuffer.cs" />
