--- a/DAL/DAL/packages.config
+++ b/DAL/DAL/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net45" />
+  <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net45" />
   <package id="SQLite.CodeFirst" version="1.5.1.25" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net45" />
