--- a/Model/IModel/IModel.csproj
+++ b/Model/IModel/IModel.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Extensions\TreeNodeExtensions.cs" />
     <Compile Include="FuncArgs\IAlarmSearchArg.cs" />
     <Compile Include="IClone.cs" />
+    <Compile Include="IDevMonitorNode.cs" />
     <Compile Include="IVector2.cs" />
     <Compile Include="Locations\IDepartment.cs" />
     <Compile Include="IEntity.cs" />
