--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -83,6 +83,7 @@
         <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
+    <!--<defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />-->
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
